fix column spacings

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ p {
     }
     
     .col-left {
-    width: 20%;
+    width: 30%;
     float: left;
     padding-right: 10px;
     padding-top: 50px;
